--- a/index.html
+++ b/index.html
@@ -1,129 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!-- Configuración básica de la página -->
-    <meta charset="UTF-8"> <!-- Define la codificación de caracteres como UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configuración para un diseño responsivo -->
-    <title>Página Básica con Barra de Navegación</title> <!-- Título de la página -->
-
-    <!-- Estilos CSS internos para la página -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Technology Project - Team #5</title>
     <style>
-        /* Estilo para el cuerpo de la página */
         body {
-            font-family: Arial, sans-serif; /* Fuente principal */
-            margin: 0; /* Sin margen alrededor del cuerpo */
-            padding: 0; /* Sin relleno alrededor del cuerpo */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
-        /* Estilo para el encabezado */
         header {
-            background-color: #333; /* Fondo color gris oscuro */
-            color: white; /* Texto en color blanco */
-            text-align: center; /* Texto centrado */
-            padding: 1em 0; /* Relleno arriba y abajo de 1em */
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
         }
-        /* Estilo para la barra de navegación */
         nav {
-            background-color: #333; /* Fondo color gris oscuro */
-            text-align: center; /* Enlaces centrados */
+            background-color: #333;
+            text-align: center;
         }
-        /* Estilo para los enlaces de navegación */
         nav a {
-            display: inline-block; /* Mostrar los enlaces en línea */
-            color: white; /* Color del texto en blanco */
-            text-align: center; /* Texto centrado */
-            padding: 14px 20px; /* Relleno alrededor de los enlaces */
-            text-decoration: none; /* Sin subrayado en los enlaces */
+            display: inline-block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
         }
-        /* Efecto de hover para los enlaces de navegación */
         nav a:hover {
-            background-color: #111; /* Fondo color negro cuando se pasa el ratón por encima */
+            background-color: #111;
         }
-        /* Estilo para el pie de página */
-        footer {
-            background-color: #333; /* Fondo color gris oscuro */
-            color: #fff; /* Texto en color blanco */
-            text-align: center; /* Texto centrado */
-            padding: 20px; /* Relleno de 20px */
-            margin-top: 20px; /* Margen superior de 20px */
-        }
-        /* Estilo para las secciones */
-        section {
-            font-family: Courier, monospace; /* Fuente Courier */
-            border: 1px black; /* Borde de 1px color negro */
-        }
-        /* Estilo específico para la sección "home" */
-        #home {
-            font-family: Arial, monospace; /* Fuente Arial */
-        }
-        /* Estilo específico para la sección "faq" */
-        #faq {
-            border-style: solid; /* Borde sólido */
-        }
-        /* Estilo para el elemento aside */
-        aside {
-            float: right; /* Flotar a la derecha */
-            border-style: solid; /* Borde sólido */
+         footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <!-- Encabezado de la página -->
     <header>
-        <h1>Technology Project!</h1> <!-- Título principal en el encabezado -->
+        <h1>TECHNOLOGY PROJECT</h1>
+        <h1>Team 5</h1>
     </header>
-
-    <!-- Barra de navegación -->
     <nav>
-        <!-- Enlaces de navegación -->
-        <a href="">TEAM</a>
-        <a href="">Team Member 1</a>
-        <a href="">Team Member 2</a>
-        <a href="#contact">Team Member 4</a>
-        <a href="#faq">Team Member 5</a>
+        <a href="#nowhere">Diego de la Fuente #4</a>
+        <a href="https://www.canva.com/design/DAGHsnnhnHw/pL5qB5Lx2ytKw24B8MJ7ow/edit?utm_content=DAGHsnnhnHw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Carlos Martínez #11</a>
+        <a href="https://www.canva.com/design/DAGHsQegH3Q/VpCB8zBgGBm6UWJXYEaW0A/edit?utm_content=DAGHsQegH3Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Angel Martínez #13 </a>
+        <a href="#contact">Alejandro Porras #17</a>
+        
     </nav>
 
-    <!-- Contenido adicional flotando a la derecha -->
-    <aside>
-        <!-- Video de YouTube incrustado -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eXdVDhOGqoE?si=YIetR4zQpWx4q4yI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </aside>
-
-    <!-- Contenido principal de la página -->
     <main>
-        <!-- Sección de inicio -->
-        <section id="home">
-            <h2>Bienvenido a Mi Página Web</h2>
-            <p>Esta es la sección de inicio.</p>
+        <section id="De la Fuente">
+            <h2>Diego</h2>
+            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn">.</p>
         </section>
-
-        <!-- Sección de servicios -->
-        <section id="services">
-            <h2>Servicios</h2>
-            <p>Información sobre nuestros servicios.</p>
+        <section id="Martinez">
+            <h2>Carlos</h2>
+            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
         </section>
-
-        <!-- Sección acerca de -->
-        <section id="about">
-            <h2>Acerca de</h2>
-            <p>Información sobre nosotros.</p>
+        <section id="Meraz">
+            <h2>Angel</h2>
+            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
         </section>
-
-        <!-- Sección de contacto -->
-        <section id="contact">
-            <h2>Contacto</h2>
-            <p>Cómo ponerse en contacto con nosotros.</p>
+        <section id="Porras">
+            <h2>Alejandro</h2>
+            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
         </section>
-
-        <!-- Sección de preguntas frecuentes -->
-        <section id="faq">
-            <h2>FAQ</h2>
-            <p>Preguntas frecuentes.</p>
-        </section>
+       
     </main>
 
-    <!-- Pie de página -->
+
     <footer>
-        <p>&copy; 2024 Mi Página Web</p> <!-- Derechos de autor -->
+        <p>&copy; 2024 Instituto Bilingüe Stanford</p>
     </footer>
 </body>
 </html>
