--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <h1>Team 5</h1>
     </header>
     <nav>
-        <a href="#nowhere">Diego de la Fuente #4</a>
-        <a href="https://www.canva.com/design/DAGHsnnhnHw/pL5qB5Lx2ytKw24B8MJ7ow/edit?utm_content=DAGHsnnhnHw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Carlos Martínez #11</a>
-        <a href="https://www.canva.com/design/DAGHsQegH3Q/VpCB8zBgGBm6UWJXYEaW0A/edit?utm_content=DAGHsQegH3Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Angel Martínez #13 </a>
-        <a href="#contact">Alejandro Porras #17</a>
+        <a href="image (1).png">Diego de la Fuente #4</a>
+        <a href="Captura de pantalla 2024-06-12 124100.png">Carlos Martínez #11</a>
+        <a href="image (2).png">Angel Martínez #13 </a>
+        <a href="image (3).png">Alejandro Porras #17</a>
         
     </nav>
 
