--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technology Project - Team #5</title>
     <style>
+
+        /* Font Names you can USE on font-family
+
+Arial
+Serif fonts 
+Sans-serif 
+Monospace  
+Cursive 
+Fantasy 
+  
+*/
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -36,6 +48,9 @@
             text-align: center;
             padding: 20px;
             margin-top: 20px;
+        }
+        img{
+            border-radius: 8px;
         }
     </style>
 </head>
