--- a/index.html
+++ b/index.html
@@ -6,35 +6,24 @@
     <title>Technology Project - Team #5</title>
     <style>
 
-        /* Font Names you can USE on font-family
-
-Arial
-Serif fonts 
-Sans-serif 
-Monospace  
-Cursive 
-Fantasy 
-  
-*/
-
         body {
-            font-family: Arial, sans-serif;
+            font-family: Cursive, sans-serif;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
-            color: white;
+            background-color: #F0FFFF;
+            color: black;
             text-align: center;
             padding: 1em 0;
         }
         nav {
-            background-color: #333;
+            background-color: #F0FFFF;
             text-align: center;
         }
         nav a {
             display: inline-block;
-            color: white;
+            color: #6495ED;
             text-align: center;
             padding: 14px 20px;
             text-decoration: none;
@@ -43,8 +32,8 @@ Fantasy
             background-color: #111;
         }
          footer {
-            background-color: #333;
-            color: #fff;
+            background-color: #F0FFFF;
+            color: black;
             text-align: center;
             padding: 20px;
             margin-top: 20px;
@@ -68,26 +57,19 @@ Fantasy
     </nav>
 
     <main>
-        <section id="De la Fuente">
-            <h2>Diego</h2>
-            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn">.</p>
+        <section id="Project description">
+            <h2>¿What is this proyect about?</h2>
+            <p>In this project, we created a website (HTML) based on our English proyects making use of CSS coding. </p>
         </section>
-        <section id="Martinez">
-            <h2>Carlos</h2>
-            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
+        <section id="Project start">
+            <h2>Starting the project</h2>
+            <p>To start our tech project, we first had to learn the elements of this type of coding like: head, body, header, nav, etc. We learned all of this by the activities we made in class, which involved modifying this type of codes for a specific goal.</p>
         </section>
-        <section id="Meraz">
-            <h2>Angel</h2>
-            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
+        <section id="Creating code">
+            <h2>Creating the code</h2>
+            <p> For this website, we made use of "Github", which is a great place to work in teams for the editing of this type of codes. With a preset of a HTML code, we modified the elements on it for it to look as we wanted to.</p>
         </section>
-        <section id="Porras">
-            <h2>Alejandro</h2>
-            <p><img src="https://imgs.search.brave.com/xVmBwdPPVsqBdsCFqtqR_X3QMdbRGA-T_QEfQKZqhvc/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zMy1t/ZWRpYTAuZmwueWVs/cGNkbi5jb20vYnBo/b3RvL1YxQ1NmZUFi/MndpckR1RXZjTHJy/V1EvbHMuanBn" ></p>
-        </section>
-       
     </main>
-
-
     <footer>
         <p>&copy; 2024 Instituto Bilingüe Stanford</p>
     </footer>
