--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
         <section id="Project description">
             <h2>¿What is this proyect about?</h2>
-            <p>In this project, we created a website (HTML) based on our English proyects making use of CSS coding. </p>
+            <p>In this project, we created a website based on our English proyects making use of HTML coding. </p>
         </section>
         <section id="Project start">
             <h2>Starting the project</h2>
