--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <h1>Team 5</h1>
     </header>
     <nav>
-        <a href="https://www.canva.com/design/DAGHe3rdbnA/UqjGsdPWJvR7ikFBbcamlw/edit?utm_content=DAGHe3rdbnA&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Diego de la Fuente #4</a>
-        <a href="https://www.canva.com/design/DAGHsnnhnHw/pL5qB5Lx2ytKw24B8MJ7ow/edit?utm_content=DAGHsnnhnHw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Carlos Martínez #11</a>
-        <a href="https://www.canva.com/design/DAGHsQegH3Q/VpCB8zBgGBm6UWJXYEaW0A/edit?utm_content=DAGHsQegH3Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Angel Martínez #13 </a>
-        <a href="https://www.canva.com/design/DAGHe8hchYE/PsoksK1U7EeEcBEvllkpjg/edit?utm_content=DAGHe8hchYE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">Alejandro Porras #17</a>
+        <a href="Final project Building Artificial Intelligence we can trust.png">Diego de la Fuente #4</a>
+        <a href="Reading Poster - Carlos Martínez 8-B #11.png">Carlos Martínez #11</a>
+        <a href="Blue and Red Modern Bold Minimalist Impact Of Artificial Intelligence Infographic Poster.png">Angel Martínez #13 </a>
+        <a href="Imagen212.png">Alejandro Porras #17</a>
         
     </nav>
 
