--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <nav>
         <a href="Final project Building Artificial Intelligence we can trust.png">Diego de la Fuente #4</a>
-        <a href="Reading Poster - Carlos Martínez 8-B #11.png">Carlos Martínez #11</a>
+        <a href="Reading Poster.png">Carlos Martínez #11</a>
         <a href="Blue and Red Modern Bold Minimalist Impact Of Artificial Intelligence Infographic Poster.png">Angel Martínez #13 </a>
         <a href="Imagen212.png">Alejandro Porras #17</a>
         
