--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header>
-        <h1>TECHNOLOGY PROJECT!</h1>
+        <h1>TECHNOLOGY PROJECT</h1>
         <h1>Team 5</h1>
     </header>
     <nav>
